# python-setuptools-binary-blob

./: .gitignore  README.md  setup.py
core/: CMakeLists.txt  build.sh  core.cc  core.hh  core_config.json.in
extension/: ExportCore.cc
head/: __init__.py  lib
